# redpillinvest

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
redpillinvest/: celery.py  settings.py  urls.py  wsgi.py
redpillinvest/api/: filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
redpillinvest/authentication/: serializers.py  urls.py  views.py
